# FFmpegVideoComponent-for-JUCE

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Compiling FFmpeg - OSX.txt  Compiling FFmpeg - Windows.txt  FFmpegVideoComponent_Project.jucer  LICENSE  README.md  juce_ffmpeg.cpp  juce_ffmpeg.h
Scripts/: post_buid_osx_x86_64.sh  post_build.sh  post_build_debug.bat  post_build_osx_arm.sh  post_build_osx_x86_64.sh  post_build_release.bat  pre_build_debug.bat  pre_build_release.bat
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  PlayerComponent.cpp  PlayerComponent.h  TransportComponent.cpp  TransportComponent.h
Source/cb_ffmpeg/: Architecture.md  AudioBuffer.cpp  AudioBuffer.h  AudioBufferFIFO.h  AudioDecoder.cpp  AudioDecoder.h  ExampleUsage.cpp  FFMpegVideoComponent.cpp  FFmpegHelpers.cpp  FFmpegHelpers.h  FFmpegMediaDecodeThread.cpp  FFmpegMediaDecodeThread.h  FFmpegMediaReader.cpp  FFmpegMediaReader.h  FFmpegVideoComponent.cpp  FFmpegVideoComponent.h  FFmpegVideoDecodeThread.cpp  FFmpegVideoDecodeThread.h  FFmpegVideoFramesFIFO.cpp  FFmpegVideoFramesFIFO.h  FFmpegVideoListener.h  FFmpegVideoReader.cpp  FFmpegVideoReader.h  FFmpegVideoScaler.h  MediaAudioSource.cpp  MediaAudioSource.h  MediaReader.cpp  MediaReader.h  MediaReaderConfig.h  MediaReaderTypes.cpp  MediaReaderTypes.h  MediaVideoComponent.cpp  MediaVideoComponent.h  README.md  README_Architecture.md  SYSTEM_STATUS.md  VideoBuffer.cpp  VideoBuffer.h  VideoDecoder.cpp  VideoDecoder.h  (+2 more)
Source/cb_strings/: StringHelper.h
cmake/: FindJUCE.cmake  Findffmpeg.cmake  config.cmake
